Added RecordsTest and TextBlocksTest